--- a/app-config.properties
+++ b/app-config.properties
@@ -1,3 +1,3 @@
 SHORT_URL_LEN=7
-SQLITE_DATABASE_URI=sqlite:///urls.db
-POSTGRES_DATABASE_URI=postgres://postgres:postgres@localhost:5432/postgres
+DATABASE_URI=sqlite:///urls.db
+#DATABASE_URI=postgres://postgres:postgres@localhost:5432/postgres
